# weekly_recipe_api

./: .env.example  Cargo.toml  Dockerfile
.sqlx/: query-04bcdb61efcad7e616de63830b1fbb3e89460c7f3084fe8c4aabb72d3ce622a0.json  query-177552a1b70a6cd6cf9574df1cf4cb077fb6399e11a312c2c48d5934c90d5e22.json  query-254830bc4075fba11cdf69c53986c10591794ea00ae5cd8261a6e339522775b6.json  query-27a6c7748f99140190471acec58c37d62e4b583ba966968e3e530495fdb2d67e.json  query-28e009ed3ff411e20aff3ab281c2c681e4e97768b175e789e51297445fbca508.json  query-330261bda7480da2b82ae55d3fe494e021e8b51d2be233f0c897d6175ae8571b.json  query-3348baa54a4a7496a71f72df5064855f797c8b094508b8f133971383d7e1be06.json  query-3a503758fce671f04270bcc2a5c69be05e03e757a0be19f96c548a32215662ec.json  query-49ec84f88ba45de6e9cdaf68f8895b5b72e05c58c50e399b11cbad40cd022f22.json  query-58eb850d594b7158c1f94c55522fad6a5d1f362e2801081e19c628bf2c638262.json  query-5c291a7b1983b4cac35ad3732e01decd2716c9c77e596d4d76e0b6dbc615e5fd.json  query-7911feb46c9a88ad9d363719541c2f4b296db3b56934287d319a3c866442d924.json  query-870610a4b3729d742f341f80e6d4f4b4aeda37c951d7bb9f9a9a58f67f63af08.json  query-9a86348d7fd1f09b7463aeb6b431ca6d155bbe9dbdb3b7c2866a7c00cb29a14f.json  query-9e58106edadb215af6922d54bdd33467d73f846bf9188e39c89cb6f16894ce88.json  query-aec6ac7b134680a6d7fb8b12ca7d5b4ab67ddbbfb4bb8ac8ae2233bcf652df70.json  query-b1237571cf3ce335334e2dbadc967ba86d89e78f8f1f41f440dfa73eaaf855d5.json  query-c0538d47efcf24afd87afec902338163326b5fd348197b0d921478c3c13b4614.json  (+7 more)
migrations/: 20250527075431_create_recipe_tables.sql  (+2 more)
(+36 files in other folders)
