[package]
name = "vecko_meny_api"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "macros",
    "migrate",
    "bigdecimal",
] }
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
dotenv = "0.15.0"
