[package]
name = "vecko_meny_api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vecko_meny_api"
path = "src/main.rs"

[dependencies]
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "derive",
    "macros",
    "migrate",
    "bigdecimal",
    "time",
    "chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
dotenv = "0.15.0"
axum = { version = "0.8.4", features = ["tower-log", "macros", "multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace", "add-extension"] }
itertools = "0.14.0"
env_logger = "0.11.8"
thiserror = "2.0.12"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive", "env"] }
log = "0.4.27"
chrono = { version = "0.4.41", features = ["serde"] }
